added jest config

--- a/package.json
+++ b/package.json
@@ -5,6 +5,15 @@
   "scripts": {
     "test": "jest"
   },
+  "jest": {
+    "testEnvironment": "node",
+  
+    "clearMocks": true,
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+    
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
